--- a/src/assets/styles/custom/_gatsby-theme.scss
+++ b/src/assets/styles/custom/_gatsby-theme.scss
@@ -9,12 +9,12 @@ $md-colors: (
 	color-on-primary: #ffffff,
 	color-on-primary-light: #000000,
 	color-on-primary-dark: #ffffff,
-	color-secundary: #ffae1f,
-	color-secundary-light: #ffe058,
-	color-secundary-dark: #c77f00,
-	color-on-secundary: #000000,
-	color-on-secundary-light: #000000,
-	color-on-secundary-dark: #000000,
+	color-secondary: #ffae1f,
+	color-secondary-light: #ffe058,
+	color-secondary-dark: #c77f00,
+	color-on-secondary: #000000,
+	color-on-secondary-light: #000000,
+	color-on-secondary-dark: #000000,
 	color-error: #b00020,
 	color-on-error: #ffffff,
 	color-background: #ffffff,
