--- a/src/assets/styles/custom/_default-theme.scss
+++ b/src/assets/styles/custom/_default-theme.scss
@@ -1,26 +1,31 @@
 /*
 	defined on:
-	https://material.io/tools/color/#!/?view.left=0&view.right=1&primary.color=663399&secondary.color=F9A825
+	https://material.io/resources/color/#!/?view.left=0&view.right=1&primary.color=444444&secondary.color=FFB100
+
+	background: #F5F5F6
+	panel background: #E1E2E1
 */
 $md-colors: (
-	color-primary: #303327,
-	color-primary-light: #595c4f,
-	color-primary-dark: #080c00,
+	color-primary: #444444,
+	color-primary-light: #6f6f6f,
+	color-primary-dark: #1d1d1d,
 	color-on-primary: #ffffff,
 	color-on-primary-light: #ffffff,
 	color-on-primary-dark: #ffffff,
-	color-secundary: #ffb100,
-	color-secundary-light: #ffe34c,
-	color-secundary-dark: #c68200,
-	color-on-secundary: #000000,
-	color-on-secundary-light: #000000,
-	color-on-secundary-dark: #000000,
+	color-secondary: #ffb100,
+	color-secondary-light: #ffe34c,
+	color-secondary-dark: #c68200,
+	color-on-secondary: #000000,
+	color-on-secondary-light: #000000,
+	color-on-secondary-dark: #000000,
 	color-error: #cf292e,
 	color-on-error: #ffffff,
-	color-background: #f8f8f8,
+	color-background: #f5f5f6,
 	color-on-background: #060606,
 	color-surface: #ffffff,
 	color-on-surface: #060606,
+	color-dark-surface: #e1e2e1,
+	color-on-dark-surface: #060606,
 );
 
 :root {
