feat: finish the first version of profile card with social links

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -2,7 +2,7 @@
 // Full Astro Component Syntax:
 // https://docs.astro.build/basics/astro-components/
 
-import redefineUrl from '#utils/redefineUrl';
+// import redefineUrl from '#utils/redefineUrl';
 
 interface IContent {
   title: string;
@@ -17,26 +17,26 @@ const { content } = Astro.props;
 
 // https://docs.astro.build/en/basics/astro-syntax/#fragments
 // defining its value only once
-const styleFragment = `
-<style>
-  :root {
-    --externalIconUrl: url(${redefineUrl('images/external-link.svg')});
-  }
-</style>
-`;
+// const styleFragment = `
+// <style>
+//   :root {
+//     --externalIconUrl: url(${redefineUrl(ExternalLinkIcon.src)});
+//   }
+// </style>
+// `;
+
+// <Fragment set:html={styleFragment} />
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href={redefineUrl('/favicon.svg')} />
     <meta name="generator" content={Astro.generator} />
-    <title>{content.title}</title>
 
-    <Fragment set:html={styleFragment} />
+    <title>{content.title}</title>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <slot />
   </body>
 </html>
