refactor(import alias): use ~/*

--- a/src/components/AvatarErkoBrideeManga.astro
+++ b/src/components/AvatarErkoBrideeManga.astro
@@ -4,7 +4,7 @@
 
 import { Picture } from 'astro:assets';
 
-import AvatarImage from '#assets/images/erko_avatar_512.png';
+import AvatarImage from '~/assets/images/erko_avatar_512.png';
 
 // Avatars | TW Elements
 // https://tw-elements.com/docs/standard/components/avatar/
