--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -1,7 +1,7 @@
 ---
-import AvatarErkoBrideeManga from '#components/AvatarErkoBrideeManga.astro';
+import AvatarErkoBrideeManga from '~/components/AvatarErkoBrideeManga.astro';
 
-import SocialLink from '#components/SocialLink.astro';
+import SocialLink from '~/components/SocialLink.astro';
 ---
 
 <div class="px-10 pt-10">
