--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -2,7 +2,7 @@
 // Full Astro Component Syntax:
 // https://docs.astro.build/basics/astro-components/
 
-// import redefineUrl from '#utils/redefineUrl';
+// import redefineUrl from '~/utils/redefineUrl';
 
 interface IContent {
   title: string;
