--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '#layouts/main.astro';
+import Layout from '~/layouts/main.astro';
 
 // Component Imports
-import ProfileCard from '#components/ProfileCard.astro';
+import ProfileCard from '~/components/ProfileCard.astro';
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/basics/astro-components/
