update(tailwindcss): to v4

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -3,6 +3,7 @@
 // https://docs.astro.build/basics/astro-components/
 
 // import redefineUrl from '~/utils/redefineUrl';
+import '~/styles/global.css';
 
 interface IContent {
   title: string;
